@@ -264,19 +264,19 @@ InitConfig()
     
     // Hotkeys
     prefix = "SDL.Hotkeys.";
-    config->addOption(prefix + "CheatMenu", SDLK_F2);
+    config->addOption(prefix + "CheatMenu", SDLK_F1);
     config->addOption(prefix + "LoadLua", SDLK_F3);
     config->addOption(prefix + "RenderBG", SDLK_F4);
     config->addOption(prefix + "SaveState", SDLK_F5);
     config->addOption(prefix + "LoadState", SDLK_F7);
-    config->addOption(prefix + "Screenshot", SDLK_F9);
-    config->addOption(prefix + "Reset", SDLK_F10);
-    config->addOption(prefix + "Power", SDLK_F11);
+    config->addOption(prefix + "Reset", SDLK_F9);
+    config->addOption(prefix + "Screenshot", SDLK_F12);
     config->addOption(prefix + "Quit", SDLK_ESCAPE);
-    config->addOption(prefix + "Pause", SDLK_BACKSLASH);
+    config->addOption(prefix + "Pause", SDLK_PAUSE);
     config->addOption(prefix + "DecreaseSpeed", SDLK_MINUS);
     config->addOption(prefix + "IncreaseSpeed", SDLK_EQUALS);
-    config->addOption(prefix + "FrameAdvance", SDLK_RCTRL);
+    config->addOption(prefix + "FrameAdvance", SDLK_BACKSLASH);
+    config->addOption(prefix + "Power", 0);
     
     
 
